force-app/main/default/objects/Form_Table_Element__mdt/Form_Table_Element__mdt.object-meta.xml
<CustomObject>
    <label>Form Table Element</label>
    <pluralLabel>Form Table Elements</pluralLabel>
</CustomObject>