force-app/main/default/objects/Form_Table_Element__mdt/fields/Attribute_Name_Column_2_Component__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Name_Column_2_Component__c</fullName>
    <label>Attribute Name Column 2 Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>