force-app/main/default/objects/Form_Table_Element__mdt/fields/Attribute_Value_2_Column_1_Component__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value_2_Column_1_Component__c</fullName>
    <label>Attribute Value 2 Column 1 Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>