force-app/main/default/objects/Form_Table_Element__mdt/fields/Attribute_Value_Column_3_Component__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value_Column_3_Component__c</fullName>
    <label>Attribute Value Column 3 Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>