force-app/main/default/objects/Form_Table_Element__mdt/fields/Column_1_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Column_1_Component_Name__c</fullName>
    <label>Column 1 Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>