force-app/main/default/objects/Form_Table_Element__mdt/fields/Display_Rank__c.field-meta.xml
<CustomField>
    <fullName>Display_Rank__c</fullName>
    <label>Display Rank</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>