force-app/main/default/objects/Form_Table_Element__mdt/fields/Form_Table__c.field-meta.xml
<CustomField>
    <fullName>Form_Table__c</fullName>
    <label>Form Table</label>
    <referenceTo>Form_Table__mdt</referenceTo>
    <relationshipLabel>Form Table Elements</relationshipLabel>
    <relationshipName>Form_Table_Elements</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>